--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.neverendingservice_angela">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.RECEIVE_LAUNCH_BROADCAST"/>
     <uses-permission android:name="android.permisison.FOREGROUND_SERVICE"/>
@@ -12,10 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoDisplay"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
+<!--        android:theme="@android:style/Theme.NoDisplay"-->
 
-        <activity android:name=".utilities.MainActivity">
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +26,7 @@
             </intent-filter>
         </activity>
 
-    <service android:name=".restarter.JobService"
+    <service android:name=".JobService"
         android:permission="android.permission.BIND_JOB_SERVICE"
         tools:ignore="WrongManifestParent" />
 
@@ -32,7 +35,7 @@
 <!--            tools:ignore="WrongManifestParent" />-->
 
         <service
-            android:name=".utilities.Service"
+            android:name=".Service"
             android:clearTaskOnLaunch="true"
             android:enabled="true"
             android:excludeFromRecents="true"
@@ -40,7 +43,7 @@
             />
 
         <receiver
-        android:name=".restarter.RestartServiceBroadcastReceiver"
+        android:name=".RestartServiceBroadcastReceiver"
         android:enabled="true"
         android:exported="true"
         android:label="StartMyServiceAtBootReceiver"
